# OTCIC-SDK

./: .gitignore  .travis.yml  README.md  docker-compose.yaml
.github/workflows/: go.yml
api/: cover.html  go.mod  go.sum  main.go  main_test.go
api/database/: database.go
api/handlers/: handlers.go
api/storage/: storage.go
api/utils/: tdp.json  utils.go
collector/: collector-config.yaml  metrics.json
dashboard/: package-lock.json
dashboard/.svelte-kit/: ambient.d.ts
dashboard/backend/: Dockerfile  go.mod  go.sum  main.go  main_test.go  package-lock.json  package.json
dashboard/backend/models/: models.go
dashboard/frontend/: DevDockerfile  Dockerfile  cypress.config.js  package-lock.json  package.json
dashboard/src/: data.js
docker/: collector-config.yaml  docker-compose.yaml  metrics.json
docs/: python_design.md
js/: app.js  instrumentation.js
js/otcic/: main.js  main.test.js  package-lock.json  package.json
python/: instrumentation.py  requirements.txt  setup.py
python/examples/: README.md  http_server.py
python/otcic/: README.md  __init__.py  aggregate.py  cpu_tracer.py  ddqueue.py  disk_tracer.py  gpu_tracer.py  main.py  pyproject.toml  queue.py  ram.py  ram_tracer.py  setup.cfg
python/otcic/cpplib/: README.md  libotcicgpu.cpp  libotcicgpu.hpp  otcic_gpu_win.cpp  otcic_gpu_win.hpp
python/otcic/otcic/: __init__.py  aggregate.py  cpu_tracer.py  ddqueue.py  disk_tracer.py  gpu_tracer.py  ram_tracer.py  utils.py
python/otcic/tests/: __init__.py  generate_data.py  test_aggregate.py  test_cputracer.py  test_ddqueue.py  test_utils.py
(+42 files in other folders)
