[metadata]
name = otcic
version = 0.1.0

[options]
install_requires =
    opentelemetry-api
    opentelemetry-exporter-otlp
    opentelemetry-exporter-otlp-proto-grpc
    opentelemetry-exporter-otlp-proto-http
    opentelemetry-proto
    opentelemetry-sdk
    opentelemetry-semantic-conventions
    psutil
    gpustat